--- a/sait.html
+++ b/sait.html
@@ -35,8 +35,8 @@ i could do whatever i wanted to do in the game. I gave a 5/5 rating to the game
 but i would say that the graphics of the game did not age well.
 </pre>
     
-    
-
+<img src="cat2.jpg" alt="Pic of my cat 2" width="480" height="360">
+<img src="cat3.jpg" alt="Pic of my cat 3" width="480" height="360">
 
 
 </body>
