--- a/sait.html
+++ b/sait.html
@@ -37,6 +37,8 @@ but i would say that the graphics of the game did not age well.
     
 <img src="cat2.jpg" alt="Pic of my cat 2" width="480" height="360">
 <img src="cat3.jpg" alt="Pic of my cat 3" width="480" height="360">
+    
+<p><a href="https://taltech.ee/">Taltech main page.</p>
 
 
 </body>
