--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
 <h3> Tudengikood: </h3>
 <p> 213452IACB </p>
 
+<style>
+  
+  table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+
+  }
+</style>
+
 <table>
   
   <tr>
