--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <tr>
      <td> The Elder Scrolls V : Skyrim </td>
      <td style="color:red;"> Too much to count </td>
-     <td stlye="color:green;"> 5/5 </td>
+     <td stlye="color:g;"> 5/5 </td>
     
 <pre>  In this website is a list of a few games that i have played which i enjoyed.
 In the list i wrote the name of the games and the amount that i have spent
